🚧スクショ用に変更

--- a/index.htm
+++ b/index.htm
@@ -14,23 +14,27 @@
         <img src="img/title.gif" , width="700px"><br>
         <font color="#ff0000"><i>ようこそ！古のアプテノ(ダイト)のホームページへ！</i></font><br><br>
         <img src="img/welcome.gif" , width="500px"><br>
-        <marquee behavior="alternate" scrolldelay="1" scrollamount="10">閲覧ありがとうございます！</marquee>
+        <marquee behavior="alternate" scrolldelay="1" scrollamount="10">
+            閲覧ありがとうございます！
+        </marquee>
         <h3>
             あなたは2022/08/01から
-            <img src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img
-                src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img src="img/8.gif" width="20px"><img
-                src="img/1.gif" width="20px"><img src="img/6.gif" width="20px">人目の訪問者です！
+            <img src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img src="img/0.gif" width="20px"><img src="img/8.gif" width="20px"><img src="img/1.gif" width="20px"><img src="img/6.gif" width="20px">人目の訪問者です！
         </h3>
-        <span style="background-color:#f98484">キリ番を踏んだら<a href="">掲示板</a>で報告してね！踏み逃げ禁止！</span><br>
-        <h3>今日の格言 <span style="background-color:#5d83ff">
+        <span style="background-color:#f98484">
+            キリ番を踏んだら<a href="#">掲示板</a>で報告してね！踏み逃げ禁止！
+        </span><br>
+        <h3>今日の格言 
+            <span style="background-color:#5d83ff">
                 <font color="#FFFFFF">偉すぎてeraになった</font>
-            </span></h3>
+            </span>
+        </h3>
         <img src="img/aishiteru.gif" width="400px"><br>
         <img src="img/penguin3.gif" width="200px"><br>
         I Love...<br><br>
         最終更新2022年8月16日<br>
         <br>
-        <a href="#"><img src="img/menu.gif" width="100px"></a><br>
+        <img src="img/menu.gif" width="100px"><br>
         <a href="#"><img src="img/button_home.gif" width="100px"></a>
         <a href="#"><img src="img/button_prof.gif" width="100px"></a>
         <a href="#"><img src="img/button_keijibann.gif" width="100px"></a>
@@ -38,6 +42,7 @@
         <a href="#"><img src="img/button_link.gif" width="100px"></a>
         <br>
         <h3>リンクはご自由に！相互リンク募集中です！詳しくは<a href="#">こちら</a>！</h3><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </center>
 </body>
 
